--- a/src/styles/im.scss
+++ b/src/styles/im.scss
@@ -27,8 +27,10 @@ form,
 pre {
     margin: 0;
     padding: 0;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
 }
+
 
 
 body {
@@ -135,7 +137,7 @@ body {
     top: 15px;
     font-size: 0;
     line-height: initial;
-
+    text-align: left;
     a {
         position: relative;
         width: 16px;
@@ -356,8 +358,7 @@ body {
         position: relative;
         background-color: $pane;
         // background-color: rgba(255, 255, 255, .9);
-
-        &.show {
+        &.display {
             display: block !important;
         }
     }
