--- a/src/styles/im.scss
+++ b/src/styles/im.scss
@@ -138,6 +138,7 @@ body {
     font-size: 0;
     line-height: initial;
     text-align: left;
+
     a {
         position: relative;
         width: 16px;
@@ -357,6 +358,7 @@ body {
         display: none;
         position: relative;
         background-color: $pane;
+
         // background-color: rgba(255, 255, 255, .9);
         &.display {
             display: block !important;
@@ -494,24 +496,21 @@ body {
 
     //聊天框
     .im-chat-content {
-        height: 262px;
-        padding: 15px 15px 5px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        height: 262px;
+        height: 282px;
+        overflow: hidden;
+        position: relative;
         background-color: $content;
-
-
 
         .im-chat-btn-expand {
             display: inline-block;
-            width: 14px;
-            height: 28px;
+            width: 10px;
+            height: 20px;
             border-radius: 18px 0 0 18px;
             background-color: #cecece;
-            position: relative;
-            right: 0;
+            top: 10px;
+            right: 1px;
             position: absolute;
+            cursor: pointer;
 
             &:hover {
                 background-color: #49A8FF;
@@ -524,18 +523,23 @@ body {
 
             .im-icon {
                 position: absolute;
-                top: 5px;
+                top: 4px;
                 color: #fff;
+                right: -3px;
+                font-size: 11px;
             }
         }
 
         ul {
+            padding: 15px 20px 15px 15px;
+
             li {
                 position: relative;
                 font-size: 0;
                 margin-bottom: 10px;
                 padding-left: 60px;
-                min-height: 68px
+                min-height: 68px;
+                text-align: left;
             }
 
             //系统
@@ -575,6 +579,7 @@ body {
                     white-space: nowrap;
                     color: #999;
                     font-style: normal;
+                    margin-left: 10px;
 
                     i {
                         padding-left: 0;
@@ -596,7 +601,6 @@ body {
                 color: $contentText;
                 word-break: break-all;
                 max-width: 462px;
-
                 border: solid 1px #EDEDED;
 
                 &:after {
@@ -628,8 +632,6 @@ body {
                         border-color: $otherTextHvoer
                     }
                 }
-
-
             }
 
             //  自己发送的消息
@@ -648,6 +650,7 @@ body {
                         right: 60px;
                         text-align: right;
 
+                        // margin-right: 10px;
                         i {
                             padding-left: 0;
                             padding-right: 15px
