--- a/src/styles/im.scss
+++ b/src/styles/im.scss
@@ -320,7 +320,7 @@ body {
             }
         }
 
-        span {
+        .im-label {
             width: 100px;
             padding-left: 10px;
             font-size: 16px;
