--- a/src/styles/im.scss
+++ b/src/styles/im.scss
@@ -915,4 +915,66 @@ body {
 
 
 
+
+.downBtn {
+    position: absolute;
+    cursor: pointer;
+    right: 1rem;
+    width: 2rem;
+    height: 2rem;
+    bottom: 2rem;
+    // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04);
+    &::before {
+      content: "V";
+      position: absolute;
+      background: rgba(204, 204, 204, 0.2);
+      width: 2rem;
+      height: 2rem;
+      line-height: 2rem;
+      text-align: center;
+      border-radius: 50%;
+      top: 60%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    span {
+      background: #409eff;
+      padding: 0.1rem 0.5rem;
+      font-size: 0.7rem;
+      border-radius: 0.5rem;
+      color: #fff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  
+  .scrollButton {
+    width: 9px;
+    height: 9px;
+    .up {
+      position: absolute;
+      cursor: pointer;
+      right: 8px;
+      top: 0px;
+    }
+    .down {
+      position: absolute;
+      cursor: pointer;
+      right: 8px;
+      bottom: 0px;
+    }
+    &:hover {
+      color: #409eff;
+    }
+  }
+  .history_lable {
+    padding: 12px;
+    color: #2c90ff;
+    font-size: 12px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 //单呼效果
