--- a/src/styles/im.scss
+++ b/src/styles/im.scss
@@ -965,9 +965,13 @@ body {
 
 //用户列表
 .im-user-list {
-    height: 70%;
     text-align: left;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
+
+    .list-box {
+        height: $userListBoxHight;
+        overflow: auto;
+    }
 
     li {
         height: 2rem;
@@ -1018,6 +1022,7 @@ body {
             box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
             cursor: pointer;
         }
+
         .im-user-info {
             display: flex;
             flex-direction: column;
@@ -1050,6 +1055,45 @@ body {
     }
 }
 
+.im-notice-box {
+    height: $noticeBoxHight;
+    text-align: left;
+    position: relative;
+
+    .title {
+        padding-left: 15px;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    li {
+        font-size: 12px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .im-notice-item {
+        font-size: 12px;
+    }
+
+    .im-notice-lable {
+        font-size: 0.8rem;
+        margin-top: 0.5rem;
+        padding: 0 0.2rem;
+    }
+
+    .im-notice-img {
+        width: 100%;
+    }
+    .unnoticed{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        font-size: 13px;
+        padding-bottom: 9px;
+    }
 
 
- 
+}
