--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,7 +15,7 @@ $pane:#ffffff;
 //标题
 $title: #F5F5F5;
 //文字内容框
-$content:#F5F5F5 ;
+$content:#F5F5F5;
 $footer:#ffffff;
 
 //按钮悬停 默认选中效果
@@ -48,35 +48,41 @@ $rightBoxWidth:148px;
 
 $rightBoxCloseOffset:139px;
 
+$noticeBoxHight: 146px;
+// 用户列表大小
+$userListBoxHight:200px;
+
+
 
 
 
 :export {
-    tabsbox: $tabsbox;
-    tabActicve: $tabActicve;
-    tabHover: $tabHover;
-    title: $title;
-    content: $content;
-    footer: $footer;
-    btnHover:$btnHover;
-    tabsTitle:$tabsTitle;
-    chat:$chat;
-    pane:$pane;
-    mineText:$mineText;
-    mineTextHover:$mineTextHover;
-    otherText:$otherText;
-    otherTextHvoer:$otherTextHvoer;
-    btn:$btn;
-    btnColor:$btnColor;
-    btnHover:$btnHover;
-    btnHoverColor:$btnHoverColor;
-    contentText:$contentText;
-    contentWidth:$contentWidth;
-    foolterWidth:$foolterWidth;
-    userlistWidt:$userlistWidt;
-    tabsWidth:$tabsWidth;
-    tabsLabel:$tabsLabel;
-    rightBoxWidth:$rightBoxWidth;
-    rightBoxCloseOffset:$rightBoxCloseOffset;
-
-  }
+  tabsbox: $tabsbox;
+  tabActicve: $tabActicve;
+  tabHover: $tabHover;
+  title: $title;
+  content: $content;
+  footer: $footer;
+  btnHover: $btnHover;
+  tabsTitle: $tabsTitle;
+  chat: $chat;
+  pane: $pane;
+  mineText: $mineText;
+  mineTextHover: $mineTextHover;
+  otherText: $otherText;
+  otherTextHvoer: $otherTextHvoer;
+  btn: $btn;
+  btnColor: $btnColor;
+  btnHover: $btnHover;
+  btnHoverColor: $btnHoverColor;
+  contentText: $contentText;
+  contentWidth: $contentWidth;
+  foolterWidth: $foolterWidth;
+  userlistWidt: $userlistWidt;
+  tabsWidth: $tabsWidth;
+  tabsLabel: $tabsLabel;
+  rightBoxWidth: $rightBoxWidth;
+  rightBoxCloseOffset: $rightBoxCloseOffset;
+  noticeBoxHight: $noticeBoxHight;
+  userListBoxHight: $userListBoxHight;
+}
